openshift/jokepresentation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-presentation
  namespace: zavalik-dev
spec:
  selector:
    app: joke-presentation
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
